--- a/CSS/authors.css
+++ b/CSS/authors.css
@@ -72,7 +72,7 @@ nav .poly-q{
 
 nav h1{
 
-  font-size: 3.5vw;
+  font-size: 2.5vw;
   text-align: center;
   color: #000;
 	background: white;
@@ -80,9 +80,9 @@ nav h1{
 	border-top: 4px solid #FFD118;
 	border-radius: 5px;
   transition: 1s;
-  width: 25%;
+  width: 20%;
 	font-weight: 300;
-	padding: 10px;
+	padding: 5px;
 }
 
 nav .return-button{
@@ -373,6 +373,11 @@ footer .logos .logo-three img{
     width: 100px;
   }
 
+	nav h1{
+		font-size: 3.5vw;
+		width: 25%;
+	}
+
   nav .return-little{
     display: block;
 		font-size: 15px;
@@ -466,6 +471,11 @@ footer .logos .logo-three img{
 		height: auto;
 	}
 
+	nav h1{
+		font-size: 3.5vw;
+		width: 25%;
+	}
+
 	nav .return-little{
 		display: block;
 		font-size: 15px;
@@ -553,6 +563,11 @@ footer .logos .logo-three img{
 	nav .poly-q{
 		width: 150px;
 		height: auto;
+	}
+
+	nav h1{
+		font-size: 3.5vw;
+		width: 25%;
 	}
 
 	nav .return-little{
