--- a/CSS/DiseasePages/hd.css
+++ b/CSS/DiseasePages/hd.css
@@ -247,8 +247,8 @@ main {
 }
 
 .text{
-	width: 50%;
-	margin-left: 10%;
+	width: 55%;
+	margin-left: 5%;
 }
 
 .text h1{
@@ -282,7 +282,7 @@ main {
 	margin-left: 20px;
 }
 
-.intro-section > p, .firstd-section > p, main .epi-section > p, .gene-section > p, .protein-section > p, .patho-section > p, .clinical-section > p{
+.intro-section > p, .firstd-section > p, .epi-section > p, .gene-section > p, .protein-section > p, .patho-section > p, .clinical-section > p{
   text-align: justify;
 	font-size: 1vw;
 	line-height: 2;
@@ -305,13 +305,32 @@ input[type=checkbox] {
 	z-index: 4;
 }
 
+
 input[type=checkbox]:checked ~ label > img {
   transform: scale(1.4);
   cursor: zoom-out;
 }
 
+.gene-section img{
+	position: relative;
+	height: auto;
+	width: 80%;
+	z-index: 4;
+	left: 50%;
+	transform: translateX(-50%);
+}
 
-.interactive-image{
+.protein-section .non-interactive img{
+	position: relative;
+	height: auto;
+	width: 80%;
+	z-index: 4;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+
+.protein-section .interactive-image{
 	width: 500px;
 	height: auto;
 	text-align: center;
@@ -325,12 +344,22 @@ input[type=checkbox]:checked ~ label > img {
 	height: auto;
 	border: 1px solid;
 	margin: 0 !important;
+	padding: 0 !important;
 }
 
 .interactive-image figcaption {
 	text-align: center;
 	font-family: 'Merriweather', serif;
 }
+
+
+.patho-section img{
+	position: relative;
+	height: auto;
+	width: 100%;
+	z-index: 4;
+}
+
 
 .reference-section ol li{
 	margin-top: 10px;
@@ -378,7 +407,7 @@ input[type=checkbox]:checked ~ label > img {
 }
 
 .aside-bar-left h3{
-	font-size: 20px;
+	font-size: 18px;
 	padding: 9px 8px;
 	margin: 3px 0;
 }
@@ -621,6 +650,7 @@ footer .logos .logo-three img{
 }
 
 
+
 /* -------------------------------------- PHONE RESPONSIVENESS ----------------------------------- */
 
 @media (max-width: 500px){
@@ -665,6 +695,7 @@ footer .logos .logo-three img{
 nav{
   padding: 0 2%;
   height:80px;
+	position: relative !important;
 }
 
 nav .poly-logo{
@@ -719,6 +750,7 @@ nav .return-little:hover{
 	font-size: 1.8em;
 	margin-left: 0px !important;
 	margin-bottom: 30px;
+	padding: 10px 0 0 20px !important;
 	cursor: pointer;
 	width: 90%;
 }
@@ -743,17 +775,22 @@ input[type=checkbox]:checked ~ label > img {
 	transform: scale(1);
 }
 
-.interactive-image{
+
+.protein-section .interactive-image{
 	width: 300px;
+	height: auto;
 	text-align: center;
 	left: 50%;
 	transform: translateX(-50%);
 }
 
+
 .interactive-image img{
 	width: 300px;
 	height: auto;
+	border: 1px solid;
 	margin: 0 !important;
+	padding: 0 !important;
 }
 
 /* SPAN CONTROL FOR REFS */
@@ -763,7 +800,7 @@ input[type=checkbox]:checked ~ label > img {
 }
 
 .reflittle{
-	display: block;
+	display: inline-block;
 }
  /* ------------------------ */
 footer{
@@ -840,6 +877,10 @@ footer .logos .logo-three img{
 		right: 0;
 		margin: 0 !important;
 		padding: 3px;
+	}
+
+	nav{
+		position: relative !important;
 	}
 
 	nav .poly-logo{
@@ -940,7 +981,7 @@ footer .logos .logo-three img{
 	}
 
 	.reflittle{
-		display: block;
+		display: inline-block;
 	}
 	 /* ------------------------ */
 
@@ -988,6 +1029,7 @@ footer .logos .logo-three img{
 	nav{
 		padding: 0 2%;
 		justify-content: space-between;
+		position: relative !important;
 	}
 
 	nav .poly-logo{
@@ -995,9 +1037,129 @@ footer .logos .logo-three img{
 		height: auto;
 	}
 
-	.text{
-		width: 70%;
+	nav ul{
+		display: flex;
+		margin-left: 15%;
 	}
+
+	nav ul li{
+		margin: 0 15px;
+		padding: 10px;
+		list-style-type: none;
+		justify-content: space-between;
+		font-size: 1em;
+		background: white;
+		border-radius: 3px;
+		border: 3px solid #D0D2D3;
+		cursor: pointer;
+	}
+
+	nav ul li a{
+		cursor: pointer;
+		text-decoration: none;
+		color: black;
+	}
+	nav .dropbtn{
+		cursor: pointer;
+		background-color: #FFD118;
+	  color: #000;
+	  padding: 15px;
+	  font-size: 14px;
+	  border: none;
+		border-radius: 5px;
+		font-weight: bold;
+	}
+
+	nav .return-button{
+	  color:#000;
+	  text-decoration: none;
+	  transition: 0.3s;
+		padding: 10px !important;
+		border: 2px solid #F2C20E;
+		border-radius: 5px;
+		background: #fff;
+		font-size: 12px;
+		text-align: center;
+		margin-left: 10px !important;
+	}
+
+	.text{
+		width: 80%;
+		margin: 0 0 0 20px !important;
+	}
+
+	.text h1{
+		margin-bottom: 30px !important;
+		margin-left: 0 !important;
+		font-size: 3vw;
+	}
+
+	.intro-section > h2, .firstd-section > h2, .epi-section > h2, .gene-section > h2, .protein-section > h2, .patho-section >h2, .clinical-section > h2, .reference-section h2{
+	  font-size: 2.5vw !important;
+	  text-align: left;
+		margin-left: 0 !important;
+		margin-bottom: 20px !important;
+	}
+
+	.intro-section > p, .firstd-section > p, .epi-section > p, .gene-section > p, .protein-section > p, .patho-section > p, .clinical-section > p{
+	  text-align: justify;
+		font-size: 1.8vw;
+		line-height: 2;
+		margin-left: 0 !important;
+		margin-bottom: 20px !important;
+	}
+
+
+	.aside-bar-left{
+		position: sticky;
+		left: 0%;
+		top: 30%;
+		/* bottom: 38%; */
+		height: 20%;
+		width: 18%;
+		background: white;
+		border: 1px solid rgba(0,0,0,0.05);
+		box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
+		border-radius: 3px;
+		z-index: 1;
+		margin-bottom: 50px;
+		padding-left: 25px;
+	}
+
+	.aside-bar-left h3{
+		font-size: 1.8vw;
+		padding: 9px 8px;
+		margin: 3px 0;
+	}
+
+	/* #indicator {
+		position: fixed;
+		top: 27.5%;
+		left: 0%;
+		width: 10vw;
+		background: white;
+		border: 1px solid rgba(0,0,0,0.05);
+		box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
+		border-radius: 3px;
+		z-index: 10;
+	} */
+
+	#indicator ul {
+		/* width: calc(100% - 20px); */
+		padding: 10px;
+	}
+
+	#indicator ul li {
+		width: calc(100% - 16px);
+		font-size: 1.5vw;
+		padding: 8px 7px;
+		margin: 3px 0;
+	}
+
+	#indicator ul li.spy-active {
+		color: black;
+	}
+
 
 	.aside-bar-right{
 		display: none !important;
@@ -1009,7 +1171,6 @@ footer .logos .logo-three img{
 
 	.reflittle{
 		display: inline-block;
-
 	}
 }
 
@@ -1021,6 +1182,89 @@ footer .logos .logo-three img{
       margin: 15px 0 !important;
     }
 
+		nav .return-button{
+		  color:#000;
+		  text-decoration: none;
+		  transition: 0.3s;
+			padding: 8px !important;
+			border: 2px solid #F2C20E;
+			border-radius: 5px;
+			background: #fff;
+			text-align: center;
+			margin-left: 10px !important;
+		}
+
+		.text h1{
+			margin-bottom: 30px !important;
+			margin-left: 0 !important;
+			font-size: 2.4vw;
+		}
+
+		.intro-section > h2, .firstd-section > h2, .epi-section > h2, .gene-section > h2, .protein-section > h2, .patho-section >h2, .clinical-section > h2, .reference-section h2{
+		  font-size: 2vw !important;
+		  text-align: left;
+			margin-left: 0 !important;
+			margin-bottom: 20px !important;
+		}
+
+		.intro-section > p, .firstd-section > p, .epi-section > p, .gene-section > p, .protein-section > p, .patho-section > p, .clinical-section > p{
+		  text-align: justify;
+			font-size: 1.2vw;
+			line-height: 2;
+			margin-left: 0 !important;
+			margin-bottom: 20px !important;
+		}
+
+		.aside-bar-left{
+			position: sticky;
+			left: 0%;
+			top: 30%;
+			/* bottom: 38%; */
+			height: 30%;
+			width: 12%;
+			background: white;
+			border: 1px solid rgba(0,0,0,0.05);
+			box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
+			border-radius: 3px;
+			z-index: 1;
+			margin-bottom: 50px;
+			padding-left: 25px;
+		}
+
+		.aside-bar-left h3{
+			font-size: 15px;
+			padding: 9px 8px;
+			margin: 3px 0;
+		}
+
+		/* #indicator {
+			position: fixed;
+			top: 27.5%;
+			left: 0%;
+			width: 10vw;
+			background: white;
+			border: 1px solid rgba(0,0,0,0.05);
+			box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
+			border-radius: 3px;
+			z-index: 10;
+		} */
+
+		#indicator ul {
+			/* width: calc(100% - 20px); */
+			padding: 10px;
+		}
+
+		#indicator ul li {
+			width: calc(100% - 16px);
+			font-size: 12px;
+			padding: 9px 8px;
+			margin: 3px 0;
+		}
+
+		#indicator ul li.spy-active {
+			color: black;
+		}
+
 	}
 
 	@media (min-width: 1367px) and (max-width: 1589px){
@@ -1030,12 +1274,95 @@ footer .logos .logo-three img{
 		    padding: 0 !important;
 		    margin: 15px 0 !important;
 		  }
+
+			nav .return-button{
+				margin-left: 10px !important;
+			}
+
+			.text h1{
+				margin-bottom: 30px !important;
+				margin-left: 0 !important;
+				font-size: 2.4vw;
+			}
+
+			.intro-section > h2, .firstd-section > h2, .epi-section > h2, .gene-section > h2, .protein-section > h2, .patho-section >h2, .clinical-section > h2, .reference-section h2{
+			  font-size: 2vw !important;
+			  text-align: left;
+				margin-left: 0 !important;
+				margin-bottom: 20px !important;
+			}
+
+			.intro-section > p, .firstd-section > p, .epi-section > p, .gene-section > p, .protein-section > p, .patho-section > p, .clinical-section > p{
+			  text-align: justify;
+				font-size: 1.2vw;
+				line-height: 2;
+				margin-left: 0 !important;
+				margin-bottom: 20px !important;
+			}
+
+			.aside-bar-left{
+				position: sticky;
+				left: 0%;
+				top: 30%;
+				/* bottom: 38%; */
+				height: 30%;
+				width: 12%;
+				background: white;
+				border: 1px solid rgba(0,0,0,0.05);
+				box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
+				border-radius: 3px;
+				z-index: 1;
+				margin-bottom: 50px;
+				padding-left: 25px;
+			}
+
+			.aside-bar-left h3{
+				font-size: 18px;
+				padding: 9px 8px;
+				margin: 3px 0;
+			}
+
+			#indicator ul li {
+				width: calc(100% - 16px);
+				font-size: 15px;
+				padding: 9px 8px;
+				margin: 3px 0;
+			}
 		}
 
-		@media (min-width: 1590px){
+		@media (min-width: 1590px) and (max-width:1750px){
 
 		  header h1{
 		    font-size: 27px;
 		  }
+
+			.aside-bar-left{
+				position: sticky;
+				left: 0%;
+				top: 30%;
+				/* bottom: 38%; */
+				height: 30%;
+				width: 11%;
+				background: white;
+				border: 1px solid rgba(0,0,0,0.05);
+				box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
+				border-radius: 3px;
+				z-index: 1;
+				margin-bottom: 50px;
+				padding-left: 25px;
+			}
+
+			.aside-bar-left h3{
+				font-size: 18px;
+				padding: 9px 8px;
+				margin: 3px 0;
+			}
+
+			#indicator ul li {
+				width: calc(100% - 16px);
+				font-size: 15px;
+				padding: 9px 8px;
+				margin: 3px 0;
+			}
 
 		}
