--- a/CSS/DiseasePages/int-image.css
+++ b/CSS/DiseasePages/int-image.css
@@ -15,18 +15,18 @@
     font-size: 13px;
     text-align: center;
 }
-/* .interactive-image .unsupported-screen:before {
+.interactive-image .unsupported-screen:before {
     content: "Please rotate your device."}
-@media screen and (max-width:320px) {
-    .interactive-image {
+@media screen and (max-width:399px) {
+    .interactive-image{
     background-image: none;
     background-color: #fff;
-    max-width: 320px;
+    max-width: 399px;
 }
 .interactive-image .unsupported-screen {
     display: block;
 }
-} */
+}
 .interactive-image .hotspot {
     position: absolute;
     z-index: 8;
