--- a/CSS/contact_style.css
+++ b/CSS/contact_style.css
@@ -75,16 +75,16 @@ nav .poly-q{
 }
 
 nav h1{
-	font-family: times, serif;
-  font-size: 3.5vw;
+  font-size: 2.7vw;
   text-align: center;
   color: #000;
 	background: white;
-	border-bottom: 4px solid #FFD118;
-	border-top: 4px solid #FFD118;
+	border: 4px solid #FFD118;
+	/* border-top: 4px solid #FFD118;
+	border-bottom: 4px solid #FFD118; */
 	border-radius: 5px;
   transition: 1s;
-  width: 25%;
+  width: 30%;
 	font-weight: 300;
 	padding: 10px;
 }
@@ -134,7 +134,11 @@ nav .return-little{
   padding-left: 0px;
   font-size: 25px;
 	margin-left: 50px;
+}
 
+.contact-info a{
+	text-decoration: none;
+	color: white;
 }
 
 .contact-info i{
