--- a/CSS/authors.css
+++ b/CSS/authors.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri&family=Genos:ital,wght@0,100;0,300;0,600;1,400&family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Poppins:wght@400;500;600;700&family=Saira+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri&family=Genos:ital,wght@0,100;0,300;0,600;1,400&family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 
 *{
@@ -76,8 +79,9 @@ nav h1{
   text-align: center;
   color: #000;
 	background: white;
-	border-bottom: 4px solid #FFD118;
-	border-top: 4px solid #FFD118;
+	border: 4px solid #FFD118;
+	/* border-top: 4px solid #FFD118;
+	border-bottom: 4px solid #FFD118; */
 	border-radius: 5px;
   transition: 1s;
   width: 20%;
@@ -120,7 +124,7 @@ nav .return-little{
 
 .team .team_members{
   background: rgba(73,73,73,0.3);
-  margin: 30px;
+  margin: 100px;
   margin-top: 80px;
   height: auto;
   width: 300px;
