--- a/CSS/objective.css
+++ b/CSS/objective.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Poppins:wght@400;500;600;700&family=Saira+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri&family=Genos:ital,wght@0,100;0,300;0,600;1,400&family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 *{
   margin:0;
@@ -8,7 +11,7 @@
 
 
 body{
-  font-family: "Quicksand", sans-serif;
+  font-family: "Poppins", sans-serif;
   /*background: #1c1c1c; */
   background: linear-gradient(rgba(4, 9, 30, 0.9), rgba(4, 9, 30, 0.9)), url(../Images/free-obj.jpg) no-repeat;
   background-size: cover;
@@ -69,7 +72,7 @@ nav .poly-q{
 }
 
 nav h1{
-  font-size: 3.5vw;
+  font-size: 2.7vw;
   text-align: center;
   color: #000;
 	background: white;
@@ -80,7 +83,6 @@ nav h1{
   width: 25%;
 	font-weight: 300;
 	padding: 10px;
-	font-weight: bold;
 }
 
 nav .return-button{
@@ -117,7 +119,7 @@ section{
 }
 
 .title{
-  font-size: 3rem;
+  font-size: 2.5rem;
   margin: 2rem 0rem;
   text-align: center;
   border-radius: 1px;
@@ -140,7 +142,7 @@ section{
 }
 
 .question h3{
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .answer{
@@ -153,7 +155,7 @@ section{
 .answer p{
   padding-top: 1rem;
   line-height: 1.6;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: justify;
 }
 
