--- a/CSS/objective.css
+++ b/CSS/objective.css
@@ -76,8 +76,7 @@ nav h1{
   text-align: center;
   color: #000;
 	background: white;
-	border-bottom: 4px solid #FFD118;
-	border-top: 4px solid #FFD118;
+	border: 4px solid #FFD118;
 	border-radius: 5px;
   transition: 1s;
   width: 25%;
