--- a/CSS/objective.css
+++ b/CSS/objective.css
@@ -71,17 +71,9 @@ nav .poly-q{
 	height: auto;
 }
 
-nav h1{
-  font-size: 2.7vw;
-  text-align: center;
-  color: #000;
-	background: white;
-	border: 4px solid #FFD118;
-	border-radius: 5px;
-  transition: 1s;
-  width: 25%;
-	font-weight: 300;
-	padding: 10px;
+nav ul li{
+	list-style-type: none;
+	display: inline-block;
 }
 
 nav .return-button{
@@ -375,6 +367,12 @@ footer .logos .logo-three img{
   nav .return-button{
     display: none;
   }
+
+	.title{
+		font-size: 2rem;
+	}
+
+
 
   footer{
   	overflow: hidden;
