--- a/authors/style_not_found.css
+++ b/authors/style_not_found.css
@@ -16,7 +16,7 @@ body{
 
 header{
   position: relative;
-  background-image: linear-gradient(rgba(229, 229, 228, 0.65), rgba(225, 225, 223, 0.85)), url(Images/index-bg.jpg);
+  background-image: linear-gradient(rgba(229, 229, 228, 0.65), rgba(225, 225, 223, 0.85)), url(index-bg.jpg);
   background-position: center;
   background-size: cover;
   height: 120px;
