--- a/appreciation/appr.css
+++ b/appreciation/appr.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Tiro+Devanagari+Sanskrit:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Poppins:wght@400;500;600;700&family=Saira+Condensed&display=swap');
 
 *{
   margin: 0;
@@ -80,6 +81,7 @@ nav ul .return-button{
 	border: 2px solid #F2C20E;
 	border-radius: 5px;
 	background: #fff;
+	font-family: "Poppins", serif;
 }
 
 nav ul .return-button:hover{
@@ -92,6 +94,7 @@ nav .return-little{
   transition: 0.3s;
   padding: 5px;
   text-align: center;
+	font-family: "Poppins", serif;
 }
 
 main{
