--- a/authors/authors.css
+++ b/authors/authors.css
@@ -87,6 +87,7 @@ nav ul .return-button{
 	border: 2px solid #F2C20E;
 	border-radius: 5px;
 	background: #fff;
+	font-family: "Poppins", serif;
 }
 
 nav ul .return-button:hover{
@@ -99,6 +100,7 @@ nav .return-little{
   transition: 0.3s;
   padding: 5px;
   text-align: center;
+	font-family: "Poppins", serif;
 }
 
 .wrapper h1{
@@ -209,6 +211,7 @@ footer{
   bottom: 0;
   background-color: #e9e9e9;
   border-top: 1px solid #000;
+	font-family: "Poppins", serif;
 }
 
 footer .collumns{
