--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@
 }
 
 .header{
-  min-height: 100vh;
   width: 100%;
+  height: 100vh;
   background-image: linear-gradient(rgba(4, 9, 30, 0.8), rgba(4, 9, 30, 0.8)), url(Images/banner-gray.jpg);
   background-position: center;
   background-size: cover;
@@ -150,7 +150,7 @@ nav .fas{
   display: none;
 }
 
-@media(max-width: 700px){
+@media (min-width:281px) and (max-width: 700px){
 
   html, body{
     width: 100%;
@@ -225,6 +225,7 @@ nav .fas{
   nav .fas{
     display: block;
     text-align: left;
+    position: relative;
     color: #fff;
     font-size: 25px;
     cursor: pointer;
@@ -381,18 +382,12 @@ nav .fas{
 }
 
 
-@media(min-width: 281px) and (max-width: 480px){
-  .abcri-logo{
-    width: 20vw;
-    height: auto;
+@media (max-height: 599px){
+  .header{
+    height: 1000px;
   }
-  nav{
-    display: flex;
-    padding: 0% 6%;
-    justify-content: space-between;
-    align-items: center;
-  }
-  nav .fas{
-    margin-left: 15px;
+
+  .nav-links{
+    height: 1000px;
   }
 }
