--- a/home/home.css
+++ b/home/home.css
@@ -682,12 +682,12 @@ footer .collumns{
 }
 
 footer .collumns .first-third{
-  width: 100px;
+  width: 140px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .first-third ul {
@@ -696,7 +696,7 @@ footer .collumns .first-third ul {
 }
 
 footer .collumns .first-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .first-third ul li a{
@@ -709,12 +709,12 @@ footer .collumns .first-third ul li:hover > a{
 }
 
 footer .collumns .second-third{
-  width: 100px;
+  width: 130px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .second-third ul {
@@ -722,7 +722,7 @@ footer .collumns .second-third ul {
 }
 
 footer .collumns .second-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .second-third ul li a{
@@ -738,9 +738,9 @@ footer .collumns .third-third{
   width: 100px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .third-third ul {
@@ -748,7 +748,7 @@ footer .collumns .third-third ul {
 }
 
 footer .collumns .third-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .third-third ul li a{
@@ -1072,7 +1072,21 @@ footer .logos .logo-three img{
     display: none;
   }
 
+  footer{
+    font-size: 12px;
+  }
 
+  footer .collumns .first-third{
+      width: 120px !important;
+  }
+
+  footer .collumns .second-third{
+    width: 120px !important;
+  }
+
+  footer .collumns .third-third{
+      width: 120px !important;
+  }
 
   footer .collumns .first-third{
     margin: 10px 0px !important;
