--- a/authors/authors.css
+++ b/authors/authors.css
@@ -8,6 +8,7 @@
 *{
   margin: 0;
   padding: 0;
+	box-sizing: border-box;
 }
 
 
@@ -203,14 +204,14 @@ nav .return-little{
 }
 
 
+
 footer{
-  position: relative;
-  width: 100%;
-  height: 340px;
-  font-size: 15px;
-  bottom: 0;
+  position:relative;
+  bottom:0;
+  width:100%;
   background-color: #e9e9e9;
-  border-top: 1px solid #000;
+  border-top: 2px solid rgba(120,120,120,0.1);
+	border-top: 1px solid #000;
 	font-family: "Poppins", serif;
 }
 
@@ -222,22 +223,21 @@ footer .collumns{
 }
 
 footer .collumns .first-third{
-  width: auto;
+  width: 140px;
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
-  height: 120px;
-  padding: 10px 20px 20px 20px;
+  height: 130px;
+  padding: 0 10px;
 }
 
 footer .collumns .first-third ul {
   list-style-type: none;
-  margin-bottom: 10px;
+
 }
 
 footer .collumns .first-third ul li{
-  margin-bottom: 5px;
-  font-size: 1.2em;
+  margin-bottom: 10px;
 }
 
 footer .collumns .first-third ul li a{
@@ -250,12 +250,12 @@ footer .collumns .first-third ul li:hover > a{
 }
 
 footer .collumns .second-third{
-  width: auto;
+	width: 150px;
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
-  height: 120px;
-  padding: 10px 20px 20px 20px;
+  height: 130px;
+  padding: 0 10px;
 }
 
 footer .collumns .second-third ul {
@@ -263,8 +263,7 @@ footer .collumns .second-third ul {
 }
 
 footer .collumns .second-third ul li{
-  margin-bottom: 5px;
-  font-size: 1.2em;
+  margin-bottom: 10px;
 }
 
 footer .collumns .second-third ul li a{
@@ -277,12 +276,12 @@ footer .collumns .second-third ul li:hover > a{
 }
 
 footer .collumns .third-third{
-  width: auto;
+	width: 140px;
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
-  height: 120px;
-  padding: 10px 20px 20px 20px;
+  height: 130px;
+  padding: 0 10px;
 }
 
 footer .collumns .third-third ul {
@@ -291,7 +290,6 @@ footer .collumns .third-third ul {
 
 footer .collumns .third-third ul li{
   margin-bottom: 10px;
-  font-size: 1.2em;
 }
 
 footer .collumns .third-third ul li a{
@@ -309,12 +307,15 @@ footer svg{
   width: 150px;
   left: 50%;
   transform: translateX(-50%);
+  margin-top: 20px;
 }
 
 footer p{
   font-family: arial;
   text-align: center;
+  margin-bottom: 5px;
   font-size: 14px;
+
 }
 
 footer .logos{
@@ -407,40 +408,44 @@ footer .logos .logo-three img{
 		width: 100%;
 	}
 
-  footer{
-  	overflow: hidden;
+	.team_members{
+		padding: 20px 10px !important;
+		margin: 100px 0 !important;
+	}
+
+	footer{
+    font-size: 13px;
   }
 
   footer .collumns .first-third{
-  	margin: 10px 0px !important;
-  	border-left: none !important;
-		border-right: 3px solid #898989;
+    margin: 10px 0px !important;
+    border-left: none !important;
+		padding: 0 0 0 20px !important;
   }
 
   footer .collumns .second-third{
-  	margin: 10px 0px !important;
-		border-left: none !important;
+    margin: 10px 0px !important;
   }
 
   footer .collumns .third-third{
-  	margin: 10px 0px !important;
+    margin: 10px 0px !important;
   }
 
   footer .logos .logo-one img{
     height: auto !important;
-    width: 12vw !important;
+    width: 25vw !important;
     margin: 5px;
   }
 
   footer .logos .logo-two img{
     height: auto !important;
-    width: 12vw !important;
+    width: 30vw !important;
     margin: 5px;
   }
 
   footer .logos .logo-three img{
     height: auto !important;
-    width: 18vw !important;
+    width: 33vw !important;
     margin: 5px;
   }
 
