--- a/contact/contact_style.css
+++ b/contact/contact_style.css
@@ -199,13 +199,11 @@ main h1{
 }
 
 footer{
-  position: relative;
-  width: 100%;
-  height: 350px;
-  font-size: 15px;
-  bottom: 0;
+  position:relative;
+  bottom:0;
+  width:100%;
   background-color: #e9e9e9;
-  border-top: 1px solid #000;
+  border-top: 2px solid rgba(120,120,120,0.1);
 }
 
 footer .collumns{
@@ -216,22 +214,21 @@ footer .collumns{
 }
 
 footer .collumns .first-third{
-  width: auto;
+  width: 120px;
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
-  height: 120px;
-  padding: 10px 20px 20px 20px;
+  height: 130px;
+  padding: 0 10px;
 }
 
 footer .collumns .first-third ul {
   list-style-type: none;
-  margin-bottom: 10px;
+
 }
 
 footer .collumns .first-third ul li{
-  margin-bottom: 5px;
-  font-size: 1em;
+  margin-bottom: 10px;
 }
 
 footer .collumns .first-third ul li a{
@@ -244,12 +241,12 @@ footer .collumns .first-third ul li:hover > a{
 }
 
 footer .collumns .second-third{
-  width: auto;
+	width: 130px;
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
-  height: 120px;
-  padding: 10px 20px 20px 20px;
+  height: 130px;
+  padding: 0 10px;
 }
 
 footer .collumns .second-third ul {
@@ -257,8 +254,7 @@ footer .collumns .second-third ul {
 }
 
 footer .collumns .second-third ul li{
-  margin-bottom: 5px;
-  font-size: 1em;
+  margin-bottom: 10px;
 }
 
 footer .collumns .second-third ul li a{
@@ -271,12 +267,12 @@ footer .collumns .second-third ul li:hover > a{
 }
 
 footer .collumns .third-third{
-  width: auto;
+	width: 120px;
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
-  height: 120px;
-  padding: 10px 20px 20px 20px;
+  height: 130px;
+  padding: 0 10px;
 }
 
 footer .collumns .third-third ul {
@@ -285,7 +281,6 @@ footer .collumns .third-third ul {
 
 footer .collumns .third-third ul li{
   margin-bottom: 10px;
-  font-size: 1em;
 }
 
 footer .collumns .third-third ul li a{
@@ -303,12 +298,15 @@ footer svg{
   width: 150px;
   left: 50%;
   transform: translateX(-50%);
+  margin-top: 20px;
 }
 
 footer p{
   font-family: arial;
   text-align: center;
+  margin-bottom: 5px;
   font-size: 14px;
+
 }
 
 footer .logos{
@@ -319,19 +317,19 @@ footer .logos{
 }
 
 footer .logos .logo-one img{
-  height: auto;
+  height: 50px;
   width: 100px;
   margin: 5px;
 }
 
 footer .logos .logo-two img{
-  height: auto;
+  height: 50px;
   width: 120px;
   margin: 5px;
 }
 
 footer .logos .logo-three img{
-  height: auto;
+  height: 50px;
   width: 140px;
   margin: 5px;
 }
@@ -415,40 +413,40 @@ footer .logos .logo-three img{
     display: none;
   }
 
-  footer{
-  	overflow: hidden;
-  }
+	footer{
+		font-size: 12px;
+	}
 
-  footer .collumns .first-third{
-  	margin: 10px 0px !important;
-  	border-left: none !important;
-  }
+	footer .collumns .first-third{
+		margin: 10px 0px !important;
+		border-left: none !important;
+	}
 
-  footer .collumns .second-third{
-  	margin: 10px 0px !important;
-  }
+	footer .collumns .second-third{
+		margin: 10px 0px !important;
+	}
 
-  footer .collumns .third-third{
-  	margin: 10px 0px !important;
-  }
+	footer .collumns .third-third{
+		margin: 10px 0px !important;
+	}
 
-  footer .logos .logo-one img{
-    height: auto !important;
-    width: 12vw !important;
-    margin: 5px;
-  }
+	footer .logos .logo-one img{
+		height: auto !important;
+		width: 25vw !important;
+		margin: 5px;
+	}
 
-  footer .logos .logo-two img{
-    height: auto !important;
-    width: 12vw !important;
-    margin: 5px;
-  }
+	footer .logos .logo-two img{
+		height: auto !important;
+		width: 30vw !important;
+		margin: 5px;
+	}
 
-  footer .logos .logo-three img{
-    height: auto !important;
-    width: 18vw !important;
-    margin: 5px;
-  }
+	footer .logos .logo-three img{
+		height: auto !important;
+		width: 33vw !important;
+		margin: 5px;
+	}
 
 }
 
