--- a/diseases/drpla/style_1.css
+++ b/diseases/drpla/style_1.css
@@ -708,7 +708,7 @@ footer{
   bottom:0;
   width:100%;
   background-color: #e9e9e9;
-	z-index: 2;
+  border-top: 2px solid rgba(120,120,120,0.1);
 }
 
 footer .collumns{
@@ -719,12 +719,12 @@ footer .collumns{
 }
 
 footer .collumns .first-third{
-  width: 100px;
+  width: 140px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .first-third ul {
@@ -733,7 +733,7 @@ footer .collumns .first-third ul {
 }
 
 footer .collumns .first-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .first-third ul li a{
@@ -746,12 +746,12 @@ footer .collumns .first-third ul li:hover > a{
 }
 
 footer .collumns .second-third{
-  width: 100px;
+  width: 130px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .second-third ul {
@@ -759,7 +759,7 @@ footer .collumns .second-third ul {
 }
 
 footer .collumns .second-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .second-third ul li a{
@@ -775,9 +775,9 @@ footer .collumns .third-third{
   width: 100px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .third-third ul {
@@ -785,7 +785,7 @@ footer .collumns .third-third ul {
 }
 
 footer .collumns .third-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .third-third ul li a{
@@ -1020,21 +1020,21 @@ figcaption{
 }
 
 
-.clinical-section .list-flex .early-stage-list ,
-.clinical-section .list-flex .middle-stage-list ,
-.clinical-section .list-flex .late-stage-list{
+.clinical-section .list-flex .column-one,
+.clinical-section .list-flex .column-two,
+.clinical-section .list-flex .column-three{
 	width: 33%;
 }
 
-.clinical-section .list-flex .early-stage-list .early-stage-title,
-.clinical-section .list-flex .middle-stage-list .middle-stage-title,
-.clinical-section .list-flex .late-stage-list .late-stage-title{
+.clinical-section .list-flex .column-one .column-one-title,
+.clinical-section .list-flex .column-two .column-two-title,
+.clinical-section .list-flex .column-three .column-three-title{
 	font-size: 1em;
 }
 
-.clinical-section .list-flex .early-stage-list ul li,
-.clinical-section .list-flex .middle-stage-list ul li,
-.clinical-section .list-flex .late-stage-list ul li{
+.clinical-section .list-flex .column-one ul li,
+.clinical-section .list-flex .column-two ul li,
+.clinical-section .list-flex .column-three ul li{
 	font-size: 0.8em;
 }
 
@@ -1048,42 +1048,45 @@ figcaption{
 	display: inline-block;
 }
  /* ------------------------ */
-footer{
+ footer{
+ 	font-size: 12px;
 	overflow: hidden;
-}
+ }
 
-footer .collumns .first-third{
-	margin: 10px 0px !important;
-	border-left: none !important;
-	border-right: 3px solid #898989;
-}
 
-footer .collumns .second-third{
-	margin: 10px 0px !important;
-	border-left: none !important;
-}
+ footer .collumns .first-third{
+ 	margin: 10px 0px !important;
+ 	border-left: none !important;
+	width: 120px !important;
+ }
 
-footer .collumns .third-third{
-	margin: 10px 0px !important;
-}
+ footer .collumns .second-third{
+ 	margin: 10px 0px !important;
+	width: 120px !important;
+ }
 
-footer .logos .logo-one img{
-  height: auto !important;
-  width: 25vw !important;
-  margin: 5px;
-}
+ footer .collumns .third-third{
+ 	margin: 10px 0px !important;
+	width: 120px !important;
+ }
 
-footer .logos .logo-two img{
-  height: auto !important;
-  width: 30vw !important;
-  margin: 5px;
-}
+ footer .logos .logo-one img{
+ 	height: auto !important;
+ 	width: 25vw !important;
+ 	margin: 5px;
+ }
 
-footer .logos .logo-three img{
-  height: auto !important;
-  width: 33vw !important;
-  margin: 5px;
-}
+ footer .logos .logo-two img{
+ 	height: auto !important;
+ 	width: 30vw !important;
+ 	margin: 5px;
+ }
+
+ footer .logos .logo-three img{
+ 	height: auto !important;
+ 	width: 33vw !important;
+ 	margin: 5px;
+ }
 }
 
 /* ---------------------------------------- RESPONSIVENESS CONTROL 1 --------------------------------- */
@@ -1255,21 +1258,21 @@ footer .logos .logo-three img{
 		font-size: 1em;
 	}
 
-	.clinical-section .list-flex .early-stage-list ,
-	.clinical-section .list-flex .middle-stage-list ,
-	.clinical-section .list-flex .late-stage-list{
+	.clinical-section .list-flex .column-one ,
+	.clinical-section .list-flex .column-two ,
+	.clinical-section .list-flex .column-three{
 		width: 33%;
 	}
 
-	.clinical-section .list-flex .early-stage-list .early-stage-title,
-	.clinical-section .list-flex .middle-stage-list .middle-stage-title,
-	.clinical-section .list-flex .late-stage-list .late-stage-title{
+	.clinical-section .list-flex .column-one .column-one-title,
+	.clinical-section .list-flex .column-two .column-two-title,
+	.clinical-section .list-flex .column-three .column-three-title{
 		font-size: 1em;
 	}
 
-	.clinical-section .list-flex .early-stage-list ul li,
-	.clinical-section .list-flex .middle-stage-list ul li,
-	.clinical-section .list-flex .late-stage-list ul li{
+	.clinical-section .list-flex .column-one ul li,
+	.clinical-section .list-flex .column-two ul li,
+	.clinical-section .list-flex .column-three ul li{
 		font-size: 0.8em;
 	}
 
@@ -1400,10 +1403,11 @@ footer .logos .logo-three img{
 		margin-bottom: 20px !important;
 	}
 
-	.protein-section h3{
+	.protein-section h3, .clinical-section h3{
 	  text-align: left;
 		margin-left: 0 !important;
 		margin-bottom: 20px !important;
+		font-size: 1.8vw;
 	}
 
 	.intro-section > p, .firstd-section > p, .epi-section > p, .gene-section > p, .protein-section > p, .patho-section > p, .clinical-section > p{
@@ -1450,16 +1454,16 @@ footer .logos .logo-three img{
 	}
 
 
-	.clinical-section .list-flex .early-stage-list .early-stage-title,
-	.clinical-section .list-flex .middle-stage-list .middle-stage-title,
-	.clinical-section .list-flex .late-stage-list .late-stage-title{
+	.clinical-section .list-flex .column-one .column-one-title,
+	.clinical-section .list-flex .column-two .column-two-title,
+	.clinical-section .list-flex .column-three .column-three-title{
 		font-size: 1.5vw;
 	}
 
-	.clinical-section .list-flex .early-stage-list ul li,
-	.clinical-section .list-flex .middle-stage-list ul li,
-	.clinical-section .list-flex .late-stage-list ul li{
-		font-size: 1.5vw;
+	.clinical-section .list-flex .column-one ul li,
+	.clinical-section .list-flex .column-two ul li,
+	.clinical-section .list-flex .column-three ul li{
+		font-size: 1.2vw;
 	}
 
 
@@ -1598,7 +1602,7 @@ footer .logos .logo-three img{
 			margin-bottom: 20px !important;
 		}
 
-		.protein-section h3{
+		.protein-section h3, .clinical-section h3{
 			font-size: 2vw !important;
 		  text-align: left;
 			margin-left: 0 !important;
@@ -1607,7 +1611,7 @@ footer .logos .logo-three img{
 
 		.intro-section > p, .firstd-section > p, .epi-section > p, .gene-section > p, .protein-section > p, .patho-section > p, .clinical-section > p{
 		  text-align: justify;
-			font-size: 1.2vw;
+			font-size: 1.8vw;
 			line-height: 2;
 			margin-left: 0 !important;
 			margin-bottom: 20px !important;
