--- a/diseases/sca2/style_2.css
+++ b/diseases/sca2/style_2.css
@@ -726,7 +726,7 @@ footer{
   bottom:0;
   width:100%;
   background-color: #e9e9e9;
-	z-index: 2;
+  border-top: 2px solid rgba(120,120,120,0.1);
 }
 
 footer .collumns{
@@ -737,12 +737,12 @@ footer .collumns{
 }
 
 footer .collumns .first-third{
-  width: 100px;
+  width: 140px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .first-third ul {
@@ -751,7 +751,7 @@ footer .collumns .first-third ul {
 }
 
 footer .collumns .first-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .first-third ul li a{
@@ -764,12 +764,12 @@ footer .collumns .first-third ul li:hover > a{
 }
 
 footer .collumns .second-third{
-  width: 100px;
+  width: 130px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .second-third ul {
@@ -777,7 +777,7 @@ footer .collumns .second-third ul {
 }
 
 footer .collumns .second-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .second-third ul li a{
@@ -793,9 +793,9 @@ footer .collumns .third-third{
   width: 100px;
   display: flex;
   border-left: 3px solid #898989;
-  margin: 20px;
+  margin: 10px;
   height: 120px;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer .collumns .third-third ul {
@@ -803,7 +803,7 @@ footer .collumns .third-third ul {
 }
 
 footer .collumns .third-third ul li{
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 footer .collumns .third-third ul li a{
@@ -1070,21 +1070,21 @@ figcaption{
 }
 
 
-.clinical-section .list-flex .early-stage-list ,
-.clinical-section .list-flex .middle-stage-list ,
-.clinical-section .list-flex .late-stage-list{
+.clinical-section .list-flex .column-one,
+.clinical-section .list-flex .column-two,
+.clinical-section .list-flex .column-three{
 	width: 33%;
 }
 
-.clinical-section .list-flex .early-stage-list .early-stage-title,
-.clinical-section .list-flex .middle-stage-list .middle-stage-title,
-.clinical-section .list-flex .late-stage-list .late-stage-title{
+.clinical-section .list-flex .column-one .column-one-title,
+.clinical-section .list-flex .column-two .column-two-title,
+.clinical-section .list-flex .column-three .column-three-title{
 	font-size: 1em;
 }
 
-.clinical-section .list-flex .early-stage-list ul li,
-.clinical-section .list-flex .middle-stage-list ul li,
-.clinical-section .list-flex .late-stage-list ul li{
+.clinical-section .list-flex .column-one ul li,
+.clinical-section .list-flex .column-two ul li,
+.clinical-section .list-flex .column-three ul li{
 	font-size: 0.8em;
 }
 
@@ -1098,42 +1098,45 @@ figcaption{
 	display: inline-block;
 }
  /* ------------------------ */
-footer{
-	overflow: hidden;
-}
+ footer{
+  font-size: 12px;
+  overflow: hidden;
+ }
 
-footer .collumns .first-third{
-	margin: 10px 0px !important;
-	border-left: none !important;
-	border-right: 3px solid #898989;
-}
 
-footer .collumns .second-third{
-	margin: 10px 0px !important;
-	border-left: none !important;
-}
+ footer .collumns .first-third{
+  margin: 10px 0px !important;
+  border-left: none !important;
+  width: 120px !important;
+ }
 
-footer .collumns .third-third{
-	margin: 10px 0px !important;
-}
+ footer .collumns .second-third{
+  margin: 10px 0px !important;
+  width: 120px !important;
+ }
 
-footer .logos .logo-one img{
+ footer .collumns .third-third{
+  margin: 10px 0px !important;
+  width: 120px !important;
+ }
+
+ footer .logos .logo-one img{
   height: auto !important;
   width: 25vw !important;
   margin: 5px;
-}
+ }
 
-footer .logos .logo-two img{
+ footer .logos .logo-two img{
   height: auto !important;
   width: 30vw !important;
   margin: 5px;
-}
+ }
 
-footer .logos .logo-three img{
+ footer .logos .logo-three img{
   height: auto !important;
   width: 33vw !important;
   margin: 5px;
-}
+ }
 }
 
 /* ---------------------------------------- RESPONSIVENESS CONTROL 1 --------------------------------- */
@@ -1336,21 +1339,21 @@ footer .logos .logo-three img{
 		font-size: 1em;
 	}
 
-	.clinical-section .list-flex .early-stage-list ,
-	.clinical-section .list-flex .middle-stage-list ,
-	.clinical-section .list-flex .late-stage-list{
+	.clinical-section .list-flex .column-one,
+	.clinical-section .list-flex .column-two,
+	.clinical-section .list-flex .column-three{
 		width: 33%;
 	}
 
-	.clinical-section .list-flex .early-stage-list .early-stage-title,
-	.clinical-section .list-flex .middle-stage-list .middle-stage-title,
-	.clinical-section .list-flex .late-stage-list .late-stage-title{
+	.clinical-section .list-flex .column-one .column-one-title,
+	.clinical-section .list-flex .column-two .column-two-title,
+	.clinical-section .list-flex .column-three .column-three-title{
 		font-size: 1em;
 	}
 
-	.clinical-section .list-flex .early-stage-list ul li,
-	.clinical-section .list-flex .middle-stage-list ul li,
-	.clinical-section .list-flex .late-stage-list ul li{
+	.clinical-section .list-flex .column-one ul li,
+	.clinical-section .list-flex .column-two ul li,
+	.clinical-section .list-flex .column-three ul li{
 		font-size: 0.8em;
 	}
 
@@ -1482,7 +1485,7 @@ footer .logos .logo-three img{
 	}
 
 	.protein-section > h3, .clinical-section > h3{
-		font-size: 2vw;
+		font-size: 1.8vw;
 	  text-align: left;
 		margin-left: 0 !important;
 		margin-bottom: 20px !important;
@@ -1563,16 +1566,16 @@ footer .logos .logo-three img{
 	}
 
 
-	.clinical-section .list-flex .early-stage-list .early-stage-title,
-	.clinical-section .list-flex .middle-stage-list .middle-stage-title,
-	.clinical-section .list-flex .late-stage-list .late-stage-title{
+	.clinical-section .list-flex .column-one .column-one-title,
+	.clinical-section .list-flex .column-two .column-two-title,
+	.clinical-section .list-flex .column-three .column-three-title{
 		font-size: 1.5vw;
 	}
 
-	.clinical-section .list-flex .early-stage-list ul li,
-	.clinical-section .list-flex .middle-stage-list ul li,
-	.clinical-section .list-flex .late-stage-list ul li{
-		font-size: 1.5vw;
+	.clinical-section .list-flex .column-one ul li,
+	.clinical-section .list-flex .column-two ul li,
+	.clinical-section .list-flex .column-three ul li{
+		font-size: 1.2vw;
 	}
 
 
@@ -1711,8 +1714,8 @@ footer .logos .logo-three img{
 			margin-bottom: 20px !important;
 		}
 
-		.protein-section h3{
-			font-size: 2vw !important;
+		.protein-section h3, .clinical-section h3{
+			font-size: 1.8vw !important;
 		  text-align: left;
 			margin-left: 0 !important;
 			margin-bottom: 20px !important;
