--- a/objectives/objective.css
+++ b/objectives/objective.css
@@ -176,26 +176,27 @@ svg{
 
 
 footer{
-  position: relative;
-  bottom: 0;
+  position:relative;
+  bottom:0;
   width:100%;
   background-color: #e9e9e9;
+  border-top: 2px solid rgba(120,120,120,0.1);
 }
 
 footer .collumns{
   display: flex;
   justify-content: space-evenly;
-  height: 150px;
+  height: 140px;
 
 }
 
 footer .collumns .first-third{
-  width: 100px;
+  width: 130px;
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
+  height: 130px;
   padding: 0 10px;
-  height: 150px;
 }
 
 footer .collumns .first-third ul {
@@ -205,7 +206,6 @@ footer .collumns .first-third ul {
 
 footer .collumns .first-third ul li{
   margin-bottom: 10px;
-	margin-top: 10px;
 }
 
 footer .collumns .first-third ul li a{
@@ -222,8 +222,8 @@ footer .collumns .second-third{
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
+  height: 130px;
   padding: 0 10px;
-  height: 150px;
 }
 
 footer .collumns .second-third ul {
@@ -231,8 +231,7 @@ footer .collumns .second-third ul {
 }
 
 footer .collumns .second-third ul li{
-	margin-bottom: 10px;
-	margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 footer .collumns .second-third ul li a{
@@ -249,8 +248,8 @@ footer .collumns .third-third{
   display: flex;
   border-left: 3px solid #898989;
   margin: 10px;
+  height: 130px;
   padding: 0 10px;
-  height: 150px;
 }
 
 footer .collumns .third-third ul {
@@ -258,8 +257,7 @@ footer .collumns .third-third ul {
 }
 
 footer .collumns .third-third ul li{
-	margin-bottom: 10px;
-	margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 footer .collumns .third-third ul li a{
@@ -375,44 +373,40 @@ footer .logos .logo-three img{
 		font-size: 2rem;
 	}
 
+	footer{
+		font-size: 12px;
+	}
 
-
-  footer{
-  	overflow: hidden;
-  }
-
-  footer .collumns .first-third{
-  	margin: 10px 0px !important;
-  	border-left: none !important;
-		border-right: 3px solid #898989;
-  }
-
-  footer .collumns .second-third{
-  	margin: 10px 0px !important;
+	footer .collumns .first-third{
+		margin: 10px 0px !important;
 		border-left: none !important;
-  }
+	}
 
-  footer .collumns .third-third{
-  	margin: 10px 0px !important;
-  }
+	footer .collumns .second-third{
+		margin: 10px 0px !important;
+	}
 
-  footer .logos .logo-one img{
-    height: auto !important;
-    width: 12vw !important;
-    margin: 5px;
-  }
+	footer .collumns .third-third{
+		margin: 10px 0px !important;
+	}
 
-  footer .logos .logo-two img{
-    height: auto !important;
-    width: 12vw !important;
-    margin: 5px;
-  }
+	footer .logos .logo-one img{
+		height: auto !important;
+		width: 25vw !important;
+		margin: 5px;
+	}
 
-  footer .logos .logo-three img{
-    height: auto !important;
-    width: 18vw !important;
-    margin: 5px;
-  }
+	footer .logos .logo-two img{
+		height: auto !important;
+		width: 30vw !important;
+		margin: 5px;
+	}
+
+	footer .logos .logo-three img{
+		height: auto !important;
+		width: 33vw !important;
+		margin: 5px;
+	}
 
 }
 
